fix js swiper on mobile

--- a/css/mobile.sass
+++ b/css/mobile.sass
@@ -1,17 +1,43 @@
 @media screen and (max-width: 480px)
-  nav.open 
-    .menu-wrap
-      z-index: 9
-    .openlogo
-      background-size: cover
-      background-position: inherit
+  body
+    nav
+      height: 50px
+      .menu-wrap ul li
+        font-size: 22px
+        margin-right: 0
+      .navToggle
+        transform: scale(.8)
+        right: 10px
+        top: 0
+      .menu-text
+        right: 65px
+        top: 20px
+      &.white
+        background-color: #ffffff
+        color: #000
+        border-bottom: 1px solid rgba(#000, 0.2)
+        .menu-text
+          color: #000
+        .navToggle .icon
+          background-color: #000000
+          &::before,
+          &::after
+            background-color: #000000            
+      &.open 
+        .menu-wrap
+          z-index: 9
+        .openlogo
+          background-size: cover
+          background-position: inherit
+  .logo
+    z-index: 9999
+    width: 90px
+    img
+      width: 100%
   .logo_1
     top: 35%
   .btn
-    position: absolute
-    bottom: 10px
-    left: 15px
-    width: 220px
+    margin-bottom: 55px
   .social-wrap
     top: 80%
     left: 0
@@ -23,6 +49,7 @@
   .swiper-container-vertical>.swiper-pagination-bullets
     display: none
   .swiper-slide
+    overflow: auto;
     .on-front-desc
       width: 90%
       left: -160px
@@ -34,13 +61,10 @@
         .btn
           position: relative
           left: 0
-    .b-left,
-    .b-right
-      height: 50%
     .p-content
       margin: 25px 0 0
       height: 100%
-      overflow-y: scroll
+      // overflow-y: scroll
       p
         margin-top: 5px
     .s-title
@@ -49,7 +73,7 @@
       font-size: 22px
       line-height: 22px
     .p-image
-      padding: 55px 0
+      padding: 55px 0 15px
       .product_img
         max-width: initial
         max-height: 320px
@@ -63,11 +87,19 @@
         .btn-wrap-container .btn-more-info
           top: 0
           left: 180px
+    &:not(.header):not(.s1)
+      .btn-next
+        position: relative
+        margin-left: -10px
+        left: 50%
+        margin: 15px 0
     &.header
       background-position: 70% 0
       height: 100vh!important
       .btn-next
         display: block
+      .btn
+        position: relative
       h1
         font-size: 34px
         line-height: 44px
@@ -79,6 +111,8 @@
       h2
         font-size: 22px
         line-height: 24px
+      .b-left
+        height: 50%
     &.s6 
       .p-content
         margin: 0
@@ -91,3 +125,28 @@
     &.footer
       .b-right
         height: 280px
+
+@media screen and (max-width: 360px)
+  .swiper-slide 
+    .b-left 
+      .p-content
+        margin: 0
+    .p-image 
+      .product_img
+        max-height: 220px
+      .product_wrap
+        min-height: 200px
+        background-size: 55%
+        .btn-wrap-container .btn-more-info
+          left: 135px
+          transform: scale(.8)
+        .btn-wrap-container .btn-add-cart
+          left: -95px
+          transform: scale(.6)
+    &.header 
+      h1
+        font-size: 32px
+        line-height: 32px
+      .logo_2
+        width: 35px
+        top: 0
